Update URLLoader.